[gd_scene load_steps=16 format=2]

[ext_resource path="res://world/World.gd" type="Script" id=1]
[ext_resource path="res://ui/scenes/pause.tscn" type="PackedScene" id=2]
[ext_resource path="res://effects/Stars.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemy/scenes/EnemySpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/scenes/WeaponUi.tscn" type="PackedScene" id=5]
[ext_resource path="res://world/EnemyHolder.gd" type="Script" id=6]
[ext_resource path="res://ui/scenes/HpUi.tscn" type="PackedScene" id=7]
[ext_resource path="res://player/scenes/Ship.tscn" type="PackedScene" id=8]
[ext_resource path="res://fonts/fonty.tres" type="DynamicFont" id=9]
[ext_resource path="res://ui/buttontheme.tres" type="Theme" id=10]
[ext_resource path="res://PowerUp.tscn" type="PackedScene" id=11]
[ext_resource path="res://fonts/04b-19.tres" type="DynamicFont" id=12]

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform float vignette_intensity = 0.4;
uniform float vignette_opacity : hint_range(0.0, 1.0) = 0.5;
uniform vec4 vignette_rgb : hint_color = vec4(0.0, 0.0, 0.0, 1.0);

float vignette(vec2 uv){
	uv *= 1.0 - uv.xy;
	float vignette = uv.x * uv.y * 15.0;
	return pow(vignette, vignette_intensity * vignette_opacity);
}

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV);
	vec4 text = texture(TEXTURE, UV);
	
	text.rgba *= (vignette_rgb.rgba);
	text.rgba *= (1.0 - vignette(UV));
	
	COLOR = vec4((text.rgb)*color.rgb,text.a);
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/vignette_intensity = 4.829
shader_param/vignette_opacity = 0.12
shader_param/vignette_rgb = Color( 0, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 19.125, 183 )

[node name="World" type="Node" groups=["World"]]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 160, 90 )
z_index = 1
current = true

[node name="EnemyHolder" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="CanvasLayer2" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -22.0
margin_right = 28.0
margin_bottom = 19.0
color = Color( 0.105882, 0.105882, 0.105882, 1 )

[node name="Background" type="Control" parent="CanvasLayer2"]
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="WeaponUi" parent="CanvasLayer2/Background" instance=ExtResource( 5 )]
margin_left = 31.0
margin_top = 5.0
margin_right = -269.0
margin_bottom = -159.0

[node name="HpUi" parent="CanvasLayer2/Background" instance=ExtResource( 7 )]
margin_left = 242.0
margin_top = 5.0
margin_right = -11.0
margin_bottom = -164.0

[node name="ScoreLabel" type="Label" parent="CanvasLayer2/Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -91.5
margin_top = 7.0
margin_right = 91.5
margin_bottom = 24.0
custom_fonts/font = ExtResource( 12 )
text = "Score = 0"
align = 1
autowrap = true

[node name="powerup" type="Label" parent="CanvasLayer2/Background"]
visible = false
anchor_right = 1.0
margin_left = 134.0
margin_top = 156.0
margin_right = -3.0
margin_bottom = 173.0
custom_fonts/font = ExtResource( 9 )
text = "POWER UP!!!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stars" parent="CanvasLayer2/Background" instance=ExtResource( 3 )]

[node name="EnemySpawner" parent="CanvasLayer2/Background" instance=ExtResource( 4 )]
position = Vector2( 320, 0 )

[node name="walls" type="StaticBody2D" parent="CanvasLayer2/Background"]
position = Vector2( -15, 0 )
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer2/Background/walls"]
position = Vector2( -3, 80 )
shape = SubResource( 4 )

[node name="left" type="Position2D" parent="CanvasLayer2/Background/walls/CollisionShape2D"]
position = Vector2( 19, -79 )

[node name="bottom" type="Position2D" parent="CanvasLayer2/Background/walls/CollisionShape2D"]
position = Vector2( 19, 100 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="CanvasLayer2/Background/walls"]
position = Vector2( 378, 90 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CanvasLayer2/Background/walls"]
position = Vector2( 175, 198 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="CanvasLayer2/Background/walls"]
position = Vector2( 175, -18 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="pause" parent="CanvasLayer2/Background" instance=ExtResource( 2 )]
visible = false

[node name="anouncementlabel" type="Label" parent="CanvasLayer2/Background"]
margin_left = 3.0
margin_top = 163.0
margin_right = 189.0
margin_bottom = 177.0
theme = ExtResource( 10 )
align = 1

[node name="confetti" type="CPUParticles2D" parent="CanvasLayer2/Background/anouncementlabel"]
show_behind_parent = true
position = Vector2( 83, 2 )
emitting = false
amount = 80
emission_shape = 2
emission_rect_extents = Vector2( 80, 2 )
direction = Vector2( 0, -1 )
spread = 140.0
gravity = Vector2( 0, -50 )
initial_velocity = 20.0
linear_accel = 20.0
scale_amount = 3.0
scale_amount_random = 1.0
color = Color( 0.968627, 0, 1, 1 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="Ship" parent="CanvasLayer2/Background" instance=ExtResource( 8 )]
position = Vector2( 25, 77 )
z_index = 1

[node name="PowerUp" parent="." instance=ExtResource( 11 )]
position = Vector2( 226, 57 )

[connection signal="player_death" from="CanvasLayer2/Background/Ship" to="." method="_on_Ship_player_death"]
